<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:title="@string/BotMenu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/colorAccent"
        />
    <item android:id="@+id/action_work"
        android:title="@string/BotMenu_work"
        android:icon="@android:drawable/ic_menu_today"
        android:iconTint="@color/colorAccent"
        />
    <item android:id="@+id/action_event"
        android:title="@string/BotMenu_event"
        android:icon="@drawable/ic_store_white_24dp"
        android:iconTint="@color/colorAccent"
        />
    <item android:id="@+id/action_chat"
        android:title="@string/BotMenu_chat"
        android:icon="@android:drawable/sym_action_chat"
        />
    <item android:id="@+id/action_profile"
        android:title="@string/BotMenu_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:iconTint="@color/colorAccent"
        />
</menu>