<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.VerifyOTPFragment">


        <TextView
            android:id="@+id/lbVerifyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:padding="32dp"
            android:textColor="@color/primaryDarkColor"
            android:text="@string/VerifyPhone_Info"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbVerifyAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:padding="18dp"
            android:text="@string/VerifyPhone_Action"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teOTPCode"
                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:maxLength="6"
                    android:textSize="18sp"
                    android:typeface="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnValidate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/validate"
            />
        <TextView
            android:id="@+id/tvFakeOTP"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>